# RBI

./: .gitignore  .gitlab-ci.yml  LICENCE.txt  NOTICE.txt  README.md  dump.rdb  package-lock.json  package.json
Backend/: .env  Dockerfile  README.md  dump.rdb  pyproject.toml  server.py  start
Backend/AutoTesting/: db_functions.py  db_query_tool.py  mock_db_setup.py  pytest.ini  test_DB.py  test_customer_count.py  test_login.py  test_queue_count.py
Backend/src/: database_connect.py
Backend/src/coordinates/: coordinates_routes.py  coordinates_service.py
Backend/src/customer_count/: customer_count_routes.py  customer_count_service.py
Backend/src/customer_influx/: customer_influx_routes.py  customer_influx_services.py
Backend/src/example/: date_routes.py  example_service.py  examples_routes.py
Backend/src/login/: login_routes.py  login_service.py
Backend/src/queue_count/: queue_count_routes.py  queue_count_service.py
Backend/src/receive_camera_data/: receive_data_routes.py  receive_data_service.py
Backend/src/test/: __init__.py  test-routes.py  test-service.py
Camera/consume-analytics-scene-jansson/app/: Makefile  consume_analytics_metadata.c
Camera/consume-consolidated-track/: README.md
Camera/consume-consolidated-track/app/: Makefile  (+2 more)
Camera/customer-count-acap/: README.md
Camera/queue-detection-acap/: README.md
Frontend/: .env  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  AuthContext.tsx  global.css  main.tsx
Proxy/: .env  Dockerfile  README.md  proxy.py  requirements.txt
k8s/: BE-deployment.yml  BE-service.yml  FE-deployment.yml  FE-service.yml  README.md  allow-outbound-to-azure.yaml  ingress.yml  resource-quota.yml
(+62 files in other folders)
