[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Philip Hilding <philip.hilding@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
gunicorn = "^20.0"
python = "^3.10"
Flask = {extras = ["async"], version = "^3.0.3"}
flask-cors = "^5.0.0"
pyodbc = "^5.1.0"
azure-identity = "^1.18.0"
msal = "^1.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
