[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Philip Hilding <philip.hilding@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = {extras = ["async"], version = "^3.0.3"}
flask-cors = "^5.0.0"
pyodbc = "^5.1.0"
azure-identity = "^1.18.0"
msal = "^1.31.0"
flask-limiter = "^3.8.0"
redis = "^5.1.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-html = "^4.1.1"
pytest-asyncio = "^0.24.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
anyio = "^4.7.0"
pytest-twisted = "^1.14.3"
twisted = "^24.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
